# pkg/tasks/generate_withdrawal_requests/task.go
@@ -14,14 +14,15 @@ import (
 
 	v1 "github.com/attestantio/go-eth2-client/api/v1"
 	"github.com/attestantio/go-eth2-client/spec/phase0"
-	"github.com/ethereum/go-ethereum/accounts/abi/bind"
 	ethcommon "github.com/ethereum/go-ethereum/common"
 	ethtypes "github.com/ethereum/go-ethereum/core/types"
 	"github.com/ethereum/go-ethereum/crypto"
 	"github.com/ethpandaops/assertoor/pkg/clients/consensus"
 	"github.com/ethpandaops/assertoor/pkg/clients/execution"
 	"github.com/ethpandaops/assertoor/pkg/types"
-	"github.com/ethpandaops/assertoor/pkg/wallet"
+	"github.com/ethpandaops/spamoor/spamoor"
+	"github.com/ethpandaops/spamoor/txbuilder"
+	"github.com/holiman/uint256"
 	"github.com/sirupsen/logrus"
 	"github.com/tyler-smith/go-bip39"
 	util "github.com/wealdtech/go-eth2-util"
@@ -57,6 +58,7 @@ type Task struct {
 	logger                 logrus.FieldLogger
 	sourceSeed             []byte
 	nextIndex              uint64
+	lastIndex              uint64
 	walletPrivKey          *ecdsa.PrivateKey
 	withdrawalContractAddr ethcommon.Address
 }
@@ -117,12 +119,18 @@ func (t *Task) LoadConfig() error {
 	return nil
 }
 
+//nolint:gocyclo // no need to reduce complexity
 func (t *Task) Execute(ctx context.Context) error {
 	if t.config.SourceStartIndex > 0 {
 		t.nextIndex = uint64(t.config.SourceStartIndex) //nolint:gosec // no overflow possible
 	}
 
+	if t.config.SourceIndexCount > 0 {
+		t.lastIndex = t.nextIndex + uint64(t.config.SourceIndexCount) //nolint:gosec // no overflow possible
+	}
+
 	var subscription *consensus.Subscription[*consensus.Block]
+
 	if t.config.LimitPerSlot > 0 {
 		subscription = t.ctx.Scheduler.GetServices().ClientPool().GetConsensusPool().GetBlockCache().SubscribeBlockEvent(10)
 		defer subscription.Unsubscribe()
@@ -183,11 +191,8 @@ func (t *Task) Execute(ctx context.Context) error {
 		if err != nil {
 			t.logger.Errorf("error generating withdrawal: %v", err.Error())
 
-			if pendingChan != nil {
-				<-pendingChan
-			}
-
-			pendingWg.Done()
+			// Note: onComplete callback is still called by spamoor even on error,
+			// so we don't drain pendingChan or call pendingWg.Done() here
 		} else {
 			t.ctx.SetResult(types.TaskResultSuccess)
 
@@ -196,13 +201,22 @@ func (t *Task) Execute(ctx context.Context) error {
 
 			withdrawalTransactions = append(withdrawalTransactions, tx.Hash().Hex())
 
-			// Report progress based on total limit
-			if t.config.LimitTotal > 0 {
+			// Report progress based on total limit or index count
+			switch {
+			case t.config.LimitTotal > 0:
 				progress := float64(totalCount) / float64(t.config.LimitTotal) * 100
 				t.ctx.ReportProgress(progress, fmt.Sprintf("Generated %d/%d withdrawal requests", totalCount, t.config.LimitTotal))
-			} else {
+			case t.lastIndex > 0:
+				indexTotal := t.lastIndex - uint64(t.config.SourceStartIndex) //nolint:gosec // no overflow possible
+				progress := float64(totalCount) / float64(indexTotal) * 100
+				t.ctx.ReportProgress(progress, fmt.Sprintf("Generated %d/%d withdrawal requests", totalCount, indexTotal))
+			default:
 				t.ctx.ReportProgress(0, fmt.Sprintf("Generated %d withdrawal requests", totalCount))
 			}
+		}
+
+		if t.lastIndex > 0 && t.nextIndex >= t.lastIndex {
+			break
 		}
 
 		if t.config.LimitTotal > 0 && totalCount >= t.config.LimitTotal {
@@ -284,7 +298,7 @@ func (t *Task) Execute(ctx context.Context) error {
 	return nil
 }
 
-func (t *Task) generateWithdrawal(ctx context.Context, accountIdx uint64, onConfirm wallet.TxConfirmFn) (*ethtypes.Transaction, error) {
+func (t *Task) generateWithdrawal(ctx context.Context, accountIdx uint64, onComplete spamoor.TxCompleteFn) (*ethtypes.Transaction, error) {
 	clientPool := t.ctx.Scheduler.GetServices().ClientPool()
 
 	var sourcePubkey []byte
@@ -293,10 +307,6 @@ func (t *Task) generateWithdrawal(ctx context.Context, accountIdx uint64, onConf
 		sourcePubkey = ethcommon.FromHex(t.config.SourcePubkey)
 	} else {
 		var sourceValidator *v1.Validator
-
-		if t.config.SourceIndexCount > 0 {
-			accountIdx %= uint64(t.config.SourceIndexCount) //nolint:gosec // no overflow possible
-		}
 
 		validatorSet := clientPool.GetConsensusPool().GetValidatorSet()
 		sourceSelector := ""
@@ -355,14 +365,11 @@ func (t *Task) generateWithdrawal(ctx context.Context, accountIdx uint64, onConf
 		return nil, fmt.Errorf("no ready clients available")
 	}
 
-	txWallet, err := t.ctx.Scheduler.GetServices().WalletManager().GetWalletByPrivkey(t.walletPrivKey)
+	walletMgr := t.ctx.Scheduler.GetServices().WalletManager()
+
+	txWallet, err := walletMgr.GetWalletByPrivkey(ctx, t.walletPrivKey)
 	if err != nil {
 		return nil, fmt.Errorf("cannot initialize wallet: %w", err)
-	}
-
-	err = txWallet.AwaitReady(ctx)
-	if err != nil {
-		return nil, fmt.Errorf("cannot load wallet state: %w", err)
 	}
 
 	amount := big.NewInt(0).SetUint64(t.config.WithdrawAmount)
@@ -370,38 +377,35 @@ func (t *Task) generateWithdrawal(ctx context.Context, accountIdx uint64, onConf
 
 	t.logger.Infof("wallet: %v [nonce: %v]  %v ETH", txWallet.GetAddress().Hex(), txWallet.GetNonce(), txWallet.GetReadableBalance(18, 0, 4, false, false))
 
-	tx, err := txWallet.BuildTransaction(ctx, func(_ context.Context, nonce uint64, _ bind.SignerFn) (*ethtypes.Transaction, error) {
-		txData := make([]byte, 56) // 48 bytes pubkey + 8 bytes amount
-		copy(txData[0:48], sourcePubkey)
-		copy(txData[48:], amountBytes)
+	txData := make([]byte, 56) // 48 bytes pubkey + 8 bytes amount
+	copy(txData[0:48], sourcePubkey)
+	copy(txData[48:], amountBytes)
 
-		txObj := &ethtypes.DynamicFeeTx{
-			ChainID:   t.ctx.Scheduler.GetServices().ClientPool().GetExecutionPool().GetBlockCache().GetChainID(),
-			Nonce:     nonce,
-			GasTipCap: t.config.TxTipCap,
-			GasFeeCap: t.config.TxFeeCap,
-			Gas:       t.config.TxGasLimit,
-			To:        &t.withdrawalContractAddr,
-			Value:     t.config.TxAmount,
-			Data:      txData,
-		}
-
-		return ethtypes.NewTx(txObj), nil
+	dynFeeTx, err := txbuilder.DynFeeTx(&txbuilder.TxMetadata{
+		GasTipCap: uint256.MustFromBig(t.config.TxTipCap),
+		GasFeeCap: uint256.MustFromBig(t.config.TxFeeCap),
+		Gas:       t.config.TxGasLimit,
+		To:        &t.withdrawalContractAddr,
+		Value:     uint256.MustFromBig(t.config.TxAmount),
+		Data:      txData,
 	})
+	if err != nil {
+		return nil, fmt.Errorf("cannot build withdrawal tx data: %w", err)
+	}
+
+	tx, err := txWallet.BuildDynamicFeeTx(dynFeeTx)
 	if err != nil {
 		return nil, fmt.Errorf("cannot build withdrawal transaction: %w", err)
 	}
 
-	err = txWallet.SendTransaction(ctx, tx, &wallet.SendTransactionOptions{
-		Clients:            clients,
-		ClientsStartOffset: 0,
-		OnConfirm:          onConfirm,
-		LogFn: func(client *execution.Client, retry uint64, rebroadcast uint64, err error) {
-			if err != nil {
-				t.logger.WithFields(logrus.Fields{
-					"client": client.GetName(),
-				}).Warnf("error sending withdrawal tx %v: %v", accountIdx, err)
+	client := walletMgr.GetClient(clients[0])
 
+	err = walletMgr.GetTxPool().SendTransaction(ctx, txWallet, tx, &spamoor.SendTransactionOptions{
+		Client:      client,
+		Rebroadcast: true,
+		OnComplete:  onComplete,
+		LogFn: func(client *spamoor.Client, _ int, rebroadcast int, err error) {
+			if err != nil {
 				return
 			}
 
@@ -413,14 +417,8 @@ func (t *Task) generateWithdrawal(ctx context.Context, accountIdx uint64, onConf
 				logEntry = logEntry.WithField("rebroadcast", rebroadcast)
 			}
 
-			if retry > 0 {
-				logEntry = logEntry.WithField("retry", retry)
-			}
-
 			logEntry.Infof("submitted withdrawal transaction (source pubkey: 0x%x, amount: %v, nonce: %v)", sourcePubkey, amount.String(), tx.Nonce())
 		},
-		RebroadcastInterval: 30 * time.Second,
-		MaxRebroadcasts:     5,
 	})
 	if err != nil {
 		return nil, fmt.Errorf("failed sending withdrawal transaction: %w", err)
